[package]
name = "ssh_auth_cargo_publish"
version = "1.0.3"
description = "Store and use encrypted secret_token for crates.io with SSH key"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/automation-tasks-rs/ssh_auth_cargo_publish"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["work-in-progress", "rustlang", "crates-io"]
categories = ["command-line-interface"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
cargo_auto_lib="2.4.3"
cargo_auto_encrypt_secret_lib = "1.1.4"

log = "0.4"
pretty_env_logger="0.5.0"
thiserror = "1.0.30"
anyhow="1.0.56"
secrecy="0.8.0"
inquire="0.7.4"
base64ct="1.6.0"
aes-gcm="0.10.3"
rsa="0.9.6"
camino="1.1.6"
ssh-key="0.6.6"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std", "fmt", "time"] }
tracing-appender="0.2.2"
time = {version="0.3.36", features=["macros","local-offset"]}

[lib]
name = "ssh_auth_cargo_publish_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[[bin]]
name = "ssh_auth_cargo_publish"
path = "src/bin/ssh_auth_cargo_publish/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
